<resources>
    <string name="app_name">Rejestrator</string>
    <string name="ID">Id</string>
    <string name="PIN">Pin</string>
    <string name="Login">Login</string>
    <string name="Password">Hasło</string>
    <string name="LoginButton">Zaloguj</string>
    <string name="ChangeToAdminLoginButton">Logowanie administratora</string>
    <string name="ChangeToEmployeeLoginButton">Logowanie pracownika</string>
    <string name="LogoutButton">Wyloguj</string>
    <color name="background">#191919</color>
    <color name="aboveBack">#242424</color>
    <color name="text">#dcdcdc</color>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dostepne">Dostępne</string>
    <string name="w_trakcie">W trakcie</string>
    <string name="zakonczone">Zakończone</string>
    <string name="dostepne2">Dostępne:</string>
    <string name="w_trakcie2">W trakcie:</string>
    <string name="zakonczone2">Zakończone:</string>
    <string name="logowania">Logowania</string>
    <string name="pracownicy">Pracownicy</string>
    <string name="raport">Raport</string>
    <string name="pracownicy2">Pracownicy:</string>
    <string name="logowania2">Logowania:</string>
    <string name="przydzielone_zadania">Przydzielone zadania:</string>
    <string name="zadania_w_toku">Zadania w toku:</string>
    <string name="zakonczone_zadania">Zakończone zadania:</string>
    <string name="raport2">Raport:</string>
    <string name="edytuj">Edytuj</string>
    <string name="anuluj">Anuluj</string>
    <string name="imi">Imię</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="ok">Ok</string>
    <string name="dodaj">Dodaj</string>
    <string name="nazwa_uzytkownika">Nazwa użytkownika</string>
    <string name="zadanie">Zadanie</string>
    <string name="rejestrator_ewidencja_pracy">Rejestrator: ewidencja pracy</string>
    <string name="rejestrator_ewidencja_czasu_pracy">Rejestrator: ewidencja czasu pracy</string>
    <string name="zalogowanie_odnotuje_obecno">Zalogowanie odnotuje obecność</string>
    <string name="potwierdz_pinem">Aby potwierdzić wpisz hasło:</string>
    <string name="invalid_login">Niepoprawne dane logowania!</string>
    <string name="general">Ogólne</string>
    <string name="today">Dzisiejsze</string>
    <string name="date">Data</string>
    <string name="task">Zadanie</string>
    <string name="time">Czas</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="change">-></string>
    <string name="no_data">Nie wpisano danych do logowania.</string>
    <string name="no_conn">Błąd! Nie połączono z bazą danych.</string>
    <string name="id_pin_4">Id i pin muszą składać się odpowiednio z 4 i 6 cyfr.</string>
    <string name="id_4">Id musi składać się z 4 cyfr.</string>
    <string name="pin_4">Pin musi składać się z 6 cyfr.</string>
    <string name="id_assigned">To id jest już przypisane.</string>
    <string name="employee_edited">Edytowano pracownika.</string>
    <string name="empty_fields">Pozostawiono puste pola.</string>
    <string name="invalid_password">Niepoprawne hasło.</string>
    <string name="no_password">Nie wpisano hasła.</string>
    <string name="employee_added">Dodano pracownika.</string>
    <string name="id_username_assigned">Id oraz nazwa użytkownika zostały już przypisane.</string>
    <string name="username_assigned">Nazwa użytkownika została już przypisana.</string>
    <string name="admin_added">Dodano administratora.</string>
    <string name="task_added">Dodano zadanie</string>
    <string name="task_not_added">Nie dodano zadania</string>
    <string name="task_assigned">To zadanie zostało już przydzielone temu pracownikowi.</string>
    <string name="chart_label1">Logowania</string>
    <string name="chart_label2">Przydzielone</string>
    <string name="chart_label3">Zadania w toku</string>
    <string name="chart_label4">Wykonane</string>
    <string name="chart_label5">Ilość</string>

    <string-array name="shifts_array">
        <item>Dzienny</item>
        <item>Nocny</item>

    </string-array>
    <string name="change_lang">Zmień język</string>

</resources>