<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="10dp">

    <EditText
        android:id="@+id/addEmployeeId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ID"
        android:textColor="@color/aboveBack"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="4" />

    <EditText
        android:id="@+id/addEmployeePin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/PIN"
        android:textColor="@color/aboveBack"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="6"
        android:layout_below="@+id/addEmployeeId" />

    <EditText
        android:id="@+id/addEmployeeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/imi"
        android:textColor="@color/aboveBack"
        android:importantForAutofill="no"
        android:inputType="text"
        android:layout_below="@+id/addEmployeePin" />

    <EditText
        android:id="@+id/addEmployeeSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nazwisko"
        android:textColor="@color/aboveBack"
        android:importantForAutofill="no"
        android:inputType="text"
        android:layout_below="@+id/addEmployeeName" />

    <Spinner
        android:id="@+id/addEmployeeShift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/addEmployeeSurname"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addOkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addEmployeeShift"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_bg"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:text="@string/dodaj" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addEmployeeShift"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/round_bg"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:text="@string/anuluj" />


</RelativeLayout>