<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/row_nameEmployee"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/imi"
            android:layout_toStartOf="@+id/row_dateEmployee"
            android:layout_alignParentLeft="true"
            android:gravity="left"
            android:textColor="@color/aboveBack"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/row_surnameEmployee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nazwisko"
            android:layout_alignParentLeft="true"
            android:gravity="left"
            android:layout_below="@id/row_nameEmployee"
            android:layout_toStartOf="@+id/row_dateEmployee"
            android:textColor="@color/aboveBack"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/row_dateEmployee"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginStart="10dp"
            android:gravity="right"
            android:layout_alignParentEnd="true"
            android:textColor="@color/aboveBack"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/row_idEmployee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ID"
            android:textSize="16sp"
            android:layout_below="@+id/row_surnameEmployee" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>