<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_login_administrator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".view.fragment.LoginAdministrator">

    <EditText
        android:id="@+id/LoginTextInput"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:hint="@string/Login"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/PasswordTextInput"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:hint="@string/Password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/LoginTextInput"
        app:layout_constraintStart_toStartOf="@+id/LoginTextInput"
        app:layout_constraintTop_toBottomOf="@+id/LoginTextInput"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/LoginButtonAdmin"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/black"
        android:text="@string/LoginButton"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/PasswordTextInput"
        app:layout_constraintStart_toStartOf="@+id/PasswordTextInput"
        app:layout_constraintTop_toBottomOf="@+id/PasswordTextInput"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/ChangeToEmployeeLoginButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/black"
        android:text="@string/ChangeToEmployeeLoginButton"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginButtonAdmin"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>