<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="10dp">

    <Spinner
        android:id="@+id/addTaskSelectedEmployee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <EditText
        android:id="@+id/addTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zadanie"
        android:textColor="@color/aboveBack"
        android:importantForAutofill="no"
        android:inputType="text"
        android:layout_below="@+id/addTaskSelectedEmployee"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addOkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addTask"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/dodaj"
        android:background="@drawable/round_bg"
        android:textColor="@android:color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addTask"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/anuluj"
        android:background="@drawable/round_bg"
        android:textColor="@android:color/white"/>


</RelativeLayout>