<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="10dp">

    <TextView
        android:id="@+id/infoAboutDialog"
        android:layout_width="match_parent"
        android:text="Aby potwierdzić wpisz pin:"
        android:textColor="@color/aboveBack"
        android:textSize="18sp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/confirmPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/PIN"
        android:maxLength="4"
        android:textColor="@color/aboveBack"
        android:drawableStart="@drawable/ic_pin"
        android:drawablePadding="10dp"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:layout_below="@+id/infoAboutDialog"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirmOkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPin"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/ok"
        android:background="@drawable/round_bg"
        android:textColor="@android:color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirmCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPin"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/anuluj"
        android:background="@drawable/round_bg"
        android:textColor="@android:color/white" />


</RelativeLayout>